# fatoora

./: pyproject.toml
fatoora/: __init__.py  fatoora.py  version.py
tests/: conftest.py
